fix(visual): show overflow in visual box
if there is a long text in the box, the visual grows now instead of showing a scroll bar

#177

--- a/packages/components/content/source/2-molecules/visual/_visual__box.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__box.scss
@@ -8,9 +8,7 @@
   /* critical:start */
   width: 100%;
   max-width: var(--c-visual_box--max-width);
-  max-height: 100%;
   position: relative;
-  overflow: auto;
   padding: 1.5rem var(--spacing-m);
   border: var(--c-visual_box--border);
   background: var(--c-visual_box--background);
